--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
         </div>
 
         <div class="cta">
-            <button onclick="window.location.href='https://app.manostock.com/login'">Login</button>
-            <button onclick="window.location.href='https://app.manostock.com/get-started'">Get Started</button>
+            <button onclick="window.location.href='https://www.manostock.com'">Login</button>
+            <button onclick="window.location.href='https://www.manostock.com/signup/'">Get Started</button>
         </div>
     </div>
 
